Install React, Redux

--- a/src/ui/views/main/index.html
+++ b/src/ui/views/main/index.html
@@ -1,9 +1,12 @@
 <html>
 	<head>
 		<title>Polygen</title>
+		<link rel="stylesheet" href="../../../../node_modules/antd/dist/antd.min.css" />
 	</head>
 	<body>
-		<h1>Hello world!</h1>
-		<script src="index.js"></script>
+		<div id="content"></div>
+		<script>
+			require('./bootstrap');
+		</script>
 	</body>
 </html>
