--- a/src/ui/views/main/index.html
+++ b/src/ui/views/main/index.html
@@ -1,7 +1,16 @@
 <html>
 	<head>
 		<title>Polygen</title>
-		<link rel="stylesheet" href="../../../../node_modules/antd/dist/antd.min.css" />
+		<link rel="stylesheet" href="../../../../node_modules/bootstrap/dist/css/bootstrap.min.css" />
+		<style>
+			#content {
+				position: absolute;
+				left: 0;
+				top: 0;
+				right: 0;
+				bottom: 0;
+			}
+		</style>
 	</head>
 	<body>
 		<div id="content"></div>
