--- a/src/ui/views/main/index.html
+++ b/src/ui/views/main/index.html
@@ -2,15 +2,7 @@
 	<head>
 		<title>Polygen</title>
 		<link rel="stylesheet" href="../../../../node_modules/bootstrap/dist/css/bootstrap.min.css" />
-		<style>
-			#content {
-				position: absolute;
-				left: 0;
-				top: 0;
-				right: 0;
-				bottom: 0;
-			}
-		</style>
+		<link rel="stylesheet" href="./index.css" />
 	</head>
 	<body>
 		<div id="content"></div>
