--- a/src/ui/views/main/index.css
+++ b/src/ui/views/main/index.css
@@ -5,3 +5,7 @@ h1, h2, h3, h4, h5, h6, p, label {
 .modal-header > h1, h2, h3, h4, h5, h6 {
 	margin-top: 10px;
 }
+
+.icon-space-right {
+	margin-right: 10px;
+}
