--- a/src/ui/views/main/index.html
+++ b/src/ui/views/main/index.html
@@ -1,7 +1,9 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>Polygen</title>
 		<link rel="stylesheet" href="../../../../node_modules/bootstrap/dist/css/bootstrap.min.css" />
+		<link rel="stylesheet" href="../../../../node_modules/font-awesome/css/font-awesome.min.css" />
 		<link rel="stylesheet" href="./index.css" />
 	</head>
 	<body>
