--- a/src/ui/views/main/index.html
+++ b/src/ui/views/main/index.html
@@ -3,6 +3,8 @@
 	<head>
 		<title>Polygen</title>
 		<link rel="stylesheet" href="../../../../node_modules/bootstrap/dist/css/bootstrap.min.css" />
+		<!-- <link rel="stylesheet" href="../../../../node_modules/bootswatch/flatly/bootstrap.min.css" /> -->
+		<!-- <link rel="stylesheet" href="../../../../node_modules/bootswatch/slate/bootstrap.min.css" /> -->
 		<link rel="stylesheet" href="../../../../node_modules/font-awesome/css/font-awesome.min.css" />
 		<link rel="stylesheet" href="./index.css" />
 	</head>
