Massive UI Overhaul
- Add custom bootstrap theme (using a customized version of 'slate' theme from here https://www.bootstrap-live-customizer.com/)
- Better editor layout, canvas will now fit to fill parent properly - yay!
- Many small UI fixes

--- a/src/ui/views/main/index.html
+++ b/src/ui/views/main/index.html
@@ -3,8 +3,7 @@
 	<head>
 		<title>Polygen</title>
 		<link rel="stylesheet" href="../../../../node_modules/bootstrap/dist/css/bootstrap.min.css" />
-		<!-- <link rel="stylesheet" href="../../../../node_modules/bootswatch/flatly/bootstrap.min.css" /> -->
-		<!-- <link rel="stylesheet" href="../../../../node_modules/bootswatch/slate/bootstrap.min.css" /> -->
+		<link rel="stylesheet" href="./theme.min.css" />
 		<link rel="stylesheet" href="../../../../node_modules/font-awesome/css/font-awesome.min.css" />
 		<link rel="stylesheet" href="./index.css" />
 	</head>
